<resources>
    <string name="app_name">Quiz</string>
    <string name="java_exceptions">Java Exceptions</string>
    <string name="second_question">2. How can you handle multiple exceptions? Choose all that apply:</string>
    <string name="second_a">a. with a single catch block that handles all \n}catch (Exception e){</string>
    <string name="second_b">b. with multiple catch blocks for each exception</string>
    <string name="second_c">c. with a multi-catch block \n}catch (FileNotFoundException | EOFException e){</string>
    <string name="second_d">d. with all exceptions in one block \n}catch (FileNotFoundException, EOFException, NullPointerException){</string>
    <string name="first_question">1. What is an Exception?</string>
    <string name="first_b">b. An exception is an event that occurs during the execution of a program that disrupts the normal flow of instructions.</string>
    <string name="first_a">a. A subclass of Throwable that indicates serious problems that a reasonable application should not try to catch.</string>
    <string name="first_c">c. Unknown error, that mostly happen at run time.</string>
    <string name="first_d">d. An event, caused by the environment in which application is running, possible to recover from.</string>
    <string name="third_question">3. Fill in the empty space:</string>
    <string name="third_prefix">public void exampleMethod()</string>
    <string name="third_postfix">Exception{}</string>
    <string name="fourth_question">4. Mark all that are instances of Error or its subclass:</string>
    <string name="fourth_a">a. StackOverflowError</string>
    <string name="fourth_b">b. OutOfMemoryError</string>
    <string name="fourth_c">c. SQLError</string>
    <string name="fourth_d">d. NullPointerException</string>
    <string name="fifth_question">5. What is a stacktrace?</string>
    <string name="fifth_a">a. Provides the names of the classes and methods that were called, from the start of the application to the poin an exception occured.</string>
    <string name="fifth_b">b. Provides the name of the exception that was thrown.</string>
    <string name="fifth_c">c. Provides the name of the method that caused the exception.</string>
    <string name="fifth_d">d. Provides the names of the classes and methods that were not called due to exception.</string>
    <string name="sixth_question">6. Fill in the empty space:</string>
    <string name="sixth_prefix">if(example.isHavingAProblem()){</string>
    <string name="sixth_postfix">new HavingAProblemException (\"We have a problem\");}</string>
    <string name="seventh_question">7. Mark all that are true about exceptions:</string>
    <string name="seventh_a">a. Exceptions can be checked type and unchecked type.</string>
    <string name="seventh_b">b. All exceptions are unchecked type.</string>
    <string name="seventh_c">c. All exceptions are known to compiler.</string>
    <string name="seventh_d">d. Checked exceptions are known to compiler and unchecked exceptions are not known.</string>
    <string name="eighth_question">8. The \"try\" statement should contain at least:</string>
    <string name="eighth_a">a. one catch block</string>
    <string name="eighth_b">b. one finally block</string>
    <string name="eighth_c">c. one catch block and one finally block</string>
    <string name="eighth_d">d. one catch or finally block</string>
    <string name="ninth_question">9. What exception will be thrown by this code?</string>
    <string name="ninth_codeSample">Dog [][] dogs = new Dog [2][]; \nSystem.out.println(dogs[2][0].toString());</string>
    <string name="ninth_a">a. ArrayIndexOutOfBoundsException</string>
    <string name="ninth_b">b. code will not compile</string>
    <string name="ninth_c">c. NullPointerException</string>
    <string name="ninth_d">d. IndexOutOfBoundsException</string>
    <string name="tenth_question">10. Which class is the super class for Exception and Error?</string>
    <string name="tenth_a">a. Serializable</string>
    <string name="tenth_b">b. Object</string>
    <string name="tenth_c">c. Throwable</string>
    <string name="tenth_d">d. Error</string>
    <string name="submit">SUBMIT</string>
</resources>
